# geothermie4-btes-ates

./: .gitignore  HANDBUCH.md  INSTALLATION.md  README.md  pyproject.toml  requirements.txt  solar_to_monthly.py
Data Input/: Ground.csv  Ground_1.csv  Heizwaermebedarfe.csv  Solarthermie.csv
ates/ex1_2d/: ates_radial_2d.py
ates/ex2_3d/: ates_3d.py
ates/seasonal/: ates_seasonal.py
btes/ex1_2d/: btes_radial_2d.py
btes/ex2_3d/: btes_3d.py  btes_3d_bhe.py
btes/seasonal/: btes_seasonal.py  plot_btes.py
