[project]
name = "test"
version = "0.1.0"
description = ""
authors = [
    {name = "stormcast363",email = "maxrider363@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ogs (>=6.5.8,<7.0.0)",
    "ogstools (>=0.8.1,<0.9.0)",
    "aiohttp (==3.14.1)",
    "alembic (==1.18.4)",
    "anyio (==4.14.0)",
    "argon2-cffi (==25.1.0)",
    "arrow (==1.4.0)",
    "attrs (==26.1.0)",
    "beautifulsoup4 (==4.15.0)",
    "bleach (==6.4.0)",
    "bokeh (==3.9.1)",
    "certifi (==2026.5.20)",
    "click (==8.4.1)",
    "cmcrameri (==1.9)",
    "cmocean (==4.0.3)",
    "colorama (==0.4.6)",
    "colorcet (==3.2.1)",
    "colorlog (==6.10.1)",
    "contourpy (==1.3.3)",
    "coverage (==7.14.1)",
    "cycler (==0.12.1)",
    "cyclopts (==4.18.0)",
    "decorator (==5.3.1)",
    "defusedxml (==0.7.1)",
    "dill (==0.4.1)",
    "docstring-parser (==0.18.0)",
    "execnet (==2.1.2)",
    "fastjsonschema (==2.21.2)",
    "flexcache (==0.3)",
    "flexparser (==0.4)",
    "fonttools (==4.63.0)",
    "frozenlist (==1.8.0)",
    "fsspec (==2026.6.0)",
    "ghetool (==2.4.0)",
    "gmsh (==4.15.2)",
    "greenlet (==3.5.1)",
    "h5py (==3.16.0)",
    "imagehash (==4.3.2)",
    "imageio (==2.37.3)",
    "ipython (==9.14.1)",
    "ipywidgets (==8.1.8)",
    "jedi (==0.20.0)",
    "jinja2 (==3.1.6)",
    "jsonschema (==4.26.0)",
    "jupyter-client (==8.9.1)",
    "jupyter-server (==2.20.0)",
    "jupytext (==1.19.3)",
    "kiwisolver (==1.5.0)",
    "numpy (>=2.5.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "test", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
